# lwa-solar-util

./: .gitignore  README.md  Refraction_corr.md  pyproject.toml
lwasolarutl/: __init__.py  file.py  ndfits.py  plot_map.py  refraction_corr.py  spec.py  visualization.py
notebook/: example.ipynb  image_plot_hdf.ipynb  refraction_correction.ipynb  spec_plot.ipynb
tests/: test_import.py  test_spec.py
