[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwasolarutl"
version = "0.1.0"
description = "Utilities for OVRO-LWA solar FITS image and spectrum processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "OVRO-LWA Solar Team"}]
keywords = ["radio astronomy", "LWA", "solar", "FITS", "HDF5"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.20",
    "astropy>=5.0",
    "scipy>=1.7",
    "h5py>=3.0",
    "matplotlib>=3.5",
    "sunpy>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/ovro-eovsa/lwa-solar-util"

[tool.setuptools.packages.find]
where = ["."]
include = ["lwasolarutl*"]
